[gd_scene load_steps=2 format=3 uid="uid://56iw261d2400"]

[ext_resource type="Script" path="res://main.gd" id="1_56k8w"]

[node name="Main" type="Node2D"]
script = ExtResource("1_56k8w")

[node name="Bullets" type="Node2D" parent="."]

[node name="Asteroids" type="Node2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0

[node name="LivesLabel" type="Label" parent="HUD"]
offset_left = 10.0
offset_top = 30.0
offset_right = 50.0
offset_bottom = 53.0

[node name="LevelLabel" type="Label" parent="HUD"]
offset_left = 10.0
offset_top = 50.0
offset_right = 50.0
offset_bottom = 73.0
